# SIARI

./: README.md  clustering_classification_analysis.py  config.py  label_encoders.pkl  main.py  pyproject.toml  scaler.pkl
data/: ingredienti_reali.csv  kb_state.json  ricette_reali.csv
documentazione/: main.aux  main.out  main.tex  main.toc
documentazione/dati/: best_configs_ricette.pkl  best_kmeans_ricette.pkl  best_models_ricette.pkl  best_regression_models.pkl  best_regression_models_ricette.pkl  cluster_interpretations_ricette.pkl  final_results_ricette.pkl  label_encoders_ricette.pkl  model_comparison_results_ricette.csv  regression_comparison_results.csv  regression_comparison_results_ricette.csv  regression_configs.pkl  regression_configs_ricette.pkl  regression_results.pkl  regression_results_ricette.pkl  requirements.txt  scaler_ricette.pkl  scalers_and_encoders.pkl
src/: data_loader.py  kb_manager.py  prolog_engine.py  regressorIngredienti.py  regressorRicette.py  utils.py
