[project]
name = "icon2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "graphviz>=0.21",
    "kneed>=0.8.5",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "owlrl>=7.1.4",
    "pandas>=2.3.2",
    "pydatalog>=0.17.4",
    "pyswip>=0.3.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "rdflib>=7.1.4",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
